fix: footer overflow

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -47,6 +47,7 @@ $padding-brake: 360px;
         background-color: $gray-900;
         padding: $horizontal-space-500;
         display: flex;
+        overflow: hidden;
 
         @media (max-width: $first-column-brake) {
             flex-direction: column;
